2012-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3475630.c:
	  Fixed bug #3475630.

2012-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Enable some more peephole rules for the gbz80.

2012-01-21 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/bug2942343.c: corrected test if SDCC

2012-01-20 Borut Razem <borut.razem AT gmail.com>

	* device/lib/pic14/Makefile.am, device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.am,
	  device/lib/pic14/libm/Makefile.in:
	  added template for NEW_PICS 
	* device/non-free/lib/pic14/libdev/Makefile.in:
	  pic14 enhanced cores enabled by default

2012-01-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug2942343.c: disable for test-host
	* support/regression/tests/bug3475990.c: skip named address space
	  declaration for test-host

2012-01-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCnaddr.hpp:
	  Fix preprocessing step for named address spaces.

2012-01-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCnaddr.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCopt.c,
	  src/SDCCopt.h,
	  support/regression/tests/bug3475990.c:
	  Fixed bug #3475990.

2012-01-19 Borut Razem <borut.razem AT gmail.com>

	* device/lib/pic14/configure.in, device/lib/pic14/configure,
	  device/lib/pic14/Makefile.am, device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.am,
	  device/lib/pic14/libm/Makefile.in:
	  pic14 enhanced cores enabled by default; gputils 0.14.1 or
	  newer required

2012-01-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fsget1arg.c,
	* device/lib/_fsget2args.c: cosmetics
	* device/lib/_fsnormalize.c: fixed bug 3474855
	* support/regression/tests/bug3474855.c: new, added

2012-01-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix signed comparison on gbz80.