@@ -3,6 +3,8 @@
 	* src/z80/ralloc2.cc,
 	  support/regression/tests/bug3475630.c:
 	  Fixed bug #3475630.
+	* support/regression/tests/bug3475656.c:
+	  Regression test for bug #3475656.
 
 2012-01-21 Philipp Klaus Krause <pkk AT spth.de>
 
